Finish new releases

--- a/index.html
+++ b/index.html
@@ -493,12 +493,13 @@
                             <li><a href="#section-awscostmanagement-budgets"><span class="lbl">Budgets</span></a></li>
                         </ul>
                     </li>
-                    <li class="blue with-sub" data-category="businessapplications">
+                    <li class="red with-sub" data-category="businessapplications">
                         <span>
                             <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Arch-Category_Business-Applications_64.png" style="width: 16px; height: 16px;" /></i>
                             <span class="lbl">Business Applications</span>
                         </span>
                         <ul>
+                            <li><a href="#section-businessapplications-connect"><span class="lbl">Connect</span></a></li>
                             <li><a href="#section-businessapplications-pinpoint"><span class="lbl">Pinpoint</span></a></li>
                             <li><a href="#section-businessapplications-ses"><span class="lbl">SES</span></a></li>
                         </ul>
@@ -959,6 +960,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-businessapplications-connect" style="font-weight: 600;">Connect</a><br />
                                                     <a href="#section-businessapplications-pinpoint" style="font-weight: 600;">Pinpoint</a><br />
                                                     <a href="#section-businessapplications-ses" style="font-weight: 600;">SES</a>
                                                 </td>
@@ -1681,6 +1683,7 @@
         <script src="js/services/mediaconnect.js"></script>
         <script src="js/services/lookoutforvision.js"></script>
         <script src="js/services/fis.js"></script>
+        <script src="js/services/connect.js"></script>
         
         <script src="js/app.js"></script>
     </body>
