SSR minor adjustment to Intro table

--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
                                 <p>Former2 allows you to generate Infrastructure-as-Code outputs from your existing resources within your AWS account. By making the relevant calls using the AWS JavaScript SDK, Former2 will scan across your infrastructure and present you with the list of resources for you to choose which to generate outputs for.</p>
                                 <p class="nossr">Though <a href="https://github.com/aws/aws-sdk-js/blob/master/SERVICES.md" target="_blank">some AWS services</a> do not require it, you will need to install the Former2 Helper browser extension in order to have support for all AWS services. The extension exists to bypass a lack of CORS on some services, such as S3 and IAM.</p>
                                 <p class="nossr">
-                                    <table style="border: none;">
+                                    <table style="border: none;" class="nossr">
                                         <tr class="nossr">
                                             <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank"><img src="img/browser-chrome.svg" /></a></td>
                                             <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank" style="font-weight: 600;">&nbsp;Install Former2 Helper for Google Chrome</a></td>
