--- a/index.html
+++ b/index.html
@@ -1110,6 +1110,9 @@
                                     <input id="credentials-assumerole" type="text" class="form-control credentials-field" placeholder="Assumed Role ARN (optional)"/>
                                 </div>
                                 <div class="form-group">
+                                    <input id="credentials-sourceidentity" type="text" class="form-control credentials-field" placeholder="Source Identity (optional)"/>
+                                </div>
+                                <div class="form-group">
                                     <strong>Logged in as: </strong><span id="user-id"></span>
                                 </div>
                             </div>
@@ -1558,7 +1561,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.880.0.min.js"></script>
+        <script src="js/aws-sdk-2.886.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
