--- a/index.html
+++ b/index.html
@@ -1049,24 +1049,23 @@
                             <div class="col-md-10">
                                 <p>Welcome to Former2!</p>
                                 <p>Former2 allows you to generate Infrastructure-as-Code outputs from your existing resources within your AWS account. By making the relevant calls using the AWS JavaScript SDK, Former2 will scan across your infrastructure and present you with the list of resources for you to choose which to generate outputs for.</p>
-                                <p class="nossr">Though <a href="https://github.com/aws/aws-sdk-js/blob/master/SERVICES.md" target="_blank">some AWS services</a> do not require it, you will need to install the Former2 Helper browser extension in order to have support for all AWS services. The extension exists to bypass a lack of CORS on some services, such as S3 and IAM.</p>
-                                <p class="nossr">
-                                    <table style="border: none;" class="nossr">
-                                        <tr class="nossr">
+                                <p>Though <a href="https://github.com/aws/aws-sdk-js/blob/master/SERVICES.md" target="_blank">some AWS services</a> do not require it, you will need to install the Former2 Helper browser extension in order to have support for all AWS services. The extension exists to bypass a lack of CORS on some services, such as S3 and IAM.</p>
+                                <p>
+                                    <table style="border: none;">
+                                        <tr>
                                             <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank"><img src="img/browser-chrome.svg" /></a></td>
                                             <td><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank" style="font-weight: 600;">&nbsp;Install Former2 Helper for Google Chrome</a></td>
                                         </tr>
-                                        <tr class="nossr">
+                                        <tr>
                                             <td><a href="https://addons.mozilla.org/en-US/firefox/addon/former2-helper/" target="_blank"><img src="img/browser-firefox.svg" /></a></td>
                                             <td><a href="https://addons.mozilla.org/en-US/firefox/addon/former2-helper/" target="_blank" style="font-weight: 600;">&nbsp;Install Former2 Helper for Mozilla Firefox</a></td>
                                         </tr>
-                                        <tr class="nossr">
+                                        <tr>
                                             <td><a href="https://microsoftedge.microsoft.com/addons/detail/okkjnfohglnomdbpimkcdkiojbeiedof" target="_blank"><img src="img/browser-edge.svg" /></a></td>
                                             <td><a href="https://microsoftedge.microsoft.com/addons/detail/okkjnfohglnomdbpimkcdkiojbeiedof" target="_blank" style="font-weight: 600;">&nbsp;Install Former2 Helper for Microsoft Edge</a></td>
                                         </tr>
                                     </table>
                                 </p>
-                                <p class="ssr" style="display: none;">This instance of Former2 is installed on an EC2 instance and does not require any credentials or use of the Former2 Helper browser extension.</p>
                                 <p>If you have any questions, bugs or feature requests please <a href="https://github.com/iann0036/former2/issues" target="_blank">raise an issue</a> via GitHub.</p>
                             </div>
                             <div class="col-md-1"></div>
@@ -1095,7 +1094,7 @@
                     <div class="steps-numeric-inner">
                         <div class="row">
                             <div class="col-md-1"></div>
-                            <div class="col-md-6 nossr">
+                            <div class="col-md-6">
                                 <h5>Enter your IAM credentials:</h5>
                                 <div class="form-group">
                                     <input id="credentials-accesskey" type="text" class="form-control credentials-field" placeholder="Access Key ID"/>
@@ -1116,16 +1115,10 @@
                                     <strong>Logged in as: </strong><span id="user-id"></span>
                                 </div>
                             </div>
-                            <div class="col-md-4 nossr">
+                            <div class="col-md-4">
                                 <p style="text-align: center;">
                                     <br />
                                     You will need an IAM key pair to authenticate your requests. If you are not planning on importing resources directly, it is recommended that you provide only read access with these credentials and suggest you assign the <a href="https://console.aws.amazon.com/iam/home?#/policies/arn:aws:iam::aws:policy/ReadOnlyAccess" target="_blank">ReadOnlyAccess</a> policy. If you intend to use the Import feature, you should grant appropriate permissions to create the stack.
-                                </p>
-                            </div>
-                            <div class="col-md-10 ssr" style="display: none;">
-                                <p style="text-align: center;">
-                                    <br />
-                                    As this instance of Former2 is deployed on an EC2 instance, no credentials are required to be specified.
                                 </p>
                             </div>
                             <div class="col-md-1"></div>
