Add China regions #158

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
                                         <a class="dropdown-item region-item" data-region="sa-east-1">South America (S&#227;o Paulo)</a>
                                         <a class="dropdown-item region-item" data-region="us-gov-east-1">AWS GovCloud (US-Gov-East)</a>
                                         <a class="dropdown-item region-item" data-region="us-gov-west-1">AWS GovCloud (US-Gov-West)</a>
+                                        <a class="dropdown-item region-item" data-region="cn-north-1">China (Beijing)</a>
+                                        <a class="dropdown-item region-item" data-region="cn-northwest-1">China (Ningxia)</a>
                                     </div>
                                 </div>
 
