--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
                             <li><a href="#section-mediaservices-mediapackage"><span class="lbl">MediaPackage</span></a></li>
                             <li><a href="#section-mediaservices-mediastore"><span class="lbl">MediaStore</span></a></li>
                             <li><a href="#section-mediaservices-interactivevideoservice"><span class="lbl">Interactive Video Service</span></a></li>
+                            <li><a href="#section-mediaservices-nimblestudio"><span class="lbl">Nimble Studio</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub" data-category="machinelearning">
@@ -526,6 +527,7 @@
                             <li><a href="#section-internetofthings-core"><span class="lbl">Core</span></a></li>
                             <li><a href="#section-internetofthings-1click"><span class="lbl">1-Click</span></a></li>
                             <li><a href="#section-internetofthings-analytics"><span class="lbl">Analytics</span></a></li>
+                            <li><a href="#section-internetofthings-devicemanagement"><span class="lbl">Device Management</span></a></li>
                             <li><a href="#section-internetofthings-events"><span class="lbl">Events</span></a></li>
                             <li><a href="#section-internetofthings-greengrass"><span class="lbl">Greengrass</span></a></li>
                             <li><a href="#section-internetofthings-sitewise"><span class="lbl">SiteWise</span></a></li>
@@ -835,7 +837,8 @@
                                                     <a href="#section-mediaservices-medialive" style="font-weight: 600;">MediaLive</a><br />
                                                     <a href="#section-mediaservices-mediapackage" style="font-weight: 600;">MediaPackage</a><br />
                                                     <a href="#section-mediaservices-mediastore" style="font-weight: 600;">MediaStore</a><br />
-                                                    <a href="#section-mediaservices-interactivevideoservice" style="font-weight: 600;">Interactive Video Service</a>
+                                                    <a href="#section-mediaservices-interactivevideoservice" style="font-weight: 600;">Interactive Video Service</a><br />
+                                                    <a href="#section-mediaservices-nimblestudio" style="font-weight: 600;">Nimble Studio</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -993,6 +996,7 @@
                                                     <a href="#section-internetofthings-core" style="font-weight: 600;">Core</a><br />
                                                     <a href="#section-internetofthings-1click" style="font-weight: 600;">1-Click</a><br />
                                                     <a href="#section-internetofthings-analytics" style="font-weight: 600;">Analytics</a><br />
+                                                    <a href="#section-internetofthings-devicemanagement" style="font-weight: 600;">Device Management</a><br />
                                                     <a href="#section-internetofthings-events" style="font-weight: 600;">Events</a><br />
                                                     <a href="#section-internetofthings-greengrass" style="font-weight: 600;">Greengrass</a><br />
                                                     <a href="#section-internetofthings-sitewise" style="font-weight: 600;">SiteWise</a><br />
@@ -1556,7 +1560,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.886.0.min.js"></script>
+        <script src="js/aws-sdk-2.897.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1689,6 +1693,8 @@
         <script src="js/services/lookoutforvision.js"></script>
         <script src="js/services/fis.js"></script>
         <script src="js/services/connect.js"></script>
+        <script src="js/services/nimblestudio.js"></script>
+        <script src="js/services/iotdevicemanagement.js"></script>
         
         <script src="js/app.js"></script>
     </body>
