--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
                             <li><a href="#section-managementandgovernance-systemsmanager"><span class="lbl">Systems Manager</span></a></li>
                             <li><a href="#section-managementandgovernance-appconfig"><span class="lbl">AppConfig</span></a></li>
                             <li><a href="#section-managementandgovernance-licensemanager"><span class="lbl">License Manager</span></a></li>
+                            <li><a href="#section-managementandgovernance-prometheus"><span class="lbl">Prometheus</span></a></li>
                         </ul>
                     </li>
                     <li class="gold with-sub" data-category="mediaservices">
@@ -819,7 +820,8 @@
                                                     <a href="#section-managementandgovernance-servicecatalog" style="font-weight: 600;">Service Catalog</a><br />
                                                     <a href="#section-managementandgovernance-systemsmanager" style="font-weight: 600;">Systems Manager</a><br />
                                                     <a href="#section-managementandgovernance-appconfig" style="font-weight: 600;">AppConfig</a><br />
-                                                    <a href="#section-managementandgovernance-licensemanager" style="font-weight: 600;">License Manager</a>
+                                                    <a href="#section-managementandgovernance-licensemanager" style="font-weight: 600;">License Manager</a><br />
+                                                    <a href="#section-managementandgovernance-prometheus" style="font-weight: 600;">Prometheus</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1695,6 +1697,7 @@
         <script src="js/services/connect.js"></script>
         <script src="js/services/nimblestudio.js"></script>
         <script src="js/services/iotdevicemanagement.js"></script>
+        <script src="js/services/prometheus.js"></script>
         
         <script src="js/app.js"></script>
     </body>
