--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
                             <li><a href="#section-machinelearning-sagemaker"><span class="lbl">SageMaker</span></a></li>
                             <li><a href="#section-machinelearning-codeguru"><span class="lbl">CodeGuru</span></a></li>
                             <li><a href="#section-machinelearning-devopsguru"><span class="lbl">DevOps Guru</span></a></li>
+                            <li><a href="#section-machinelearning-frauddetector"><span class="lbl">Fraud Detector</span></a></li>
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
                             <li><a href="#section-machinelearning-lookoutforvision"><span class="lbl">Lookout For Vision</span></a></li>
@@ -433,6 +434,7 @@
                             <li><a href="#section-analytics-lakeformation"><span class="lbl">Lake Formation</span></a></li>
                             <li><a href="#section-analytics-msk"><span class="lbl">MSK</span></a></li>
                             <li><a href="#section-analytics-databrew"><span class="lbl">DataBrew</span></a></li>
+                            <li><a href="#section-analytics-finspace"><span class="lbl">FinSpace</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="securityidentityandcompliance">
@@ -855,6 +857,7 @@
                                                     <a href="#section-machinelearning-sagemaker" style="font-weight: 600;">SageMaker</a><br />
                                                     <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a><br />
                                                     <a href="#section-machinelearning-devopsguru" style="font-weight: 600;">DevOps Guru</a><br />
+                                                    <a href="#section-machinelearning-frauddetector" style="font-weight: 600;">Fraud Detector</a><br />
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
                                                     <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a><br />
                                                     <a href="#section-machinelearning-lookoutforvision" style="font-weight: 600;">Lookout For Vision</a><br />
@@ -879,7 +882,8 @@
                                                     <a href="#section-analytics-glue" style="font-weight: 600;">Glue</a><br />
                                                     <a href="#section-analytics-lakeformation" style="font-weight: 600;">Lake Formation</a><br />
                                                     <a href="#section-analytics-msk" style="font-weight: 600;">MSK</a><br />
-                                                    <a href="#section-analytics-databrew" style="font-weight: 600;">DataBrew</a>
+                                                    <a href="#section-analytics-databrew" style="font-weight: 600;">DataBrew</a><br />
+                                                    <a href="#section-analytics-finspace" style="font-weight: 600;">FinSpace</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1562,7 +1566,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.897.0.min.js"></script>
+        <script src="js/aws-sdk-2.903.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1698,6 +1702,8 @@
         <script src="js/services/nimblestudio.js"></script>
         <script src="js/services/iotdevicemanagement.js"></script>
         <script src="js/services/prometheus.js"></script>
+        <script src="js/services/finspace.js"></script>
+        <script src="js/services/frauddetector.js"></script>
         
         <script src="js/app.js"></script>
     </body>
