--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
                             <li><a href="#section-managementandgovernance-appconfig"><span class="lbl">AppConfig</span></a></li>
                             <li><a href="#section-managementandgovernance-licensemanager"><span class="lbl">License Manager</span></a></li>
                             <li><a href="#section-managementandgovernance-prometheus"><span class="lbl">Prometheus</span></a></li>
+                            <li><a href="#section-managementandgovernance-incidentmanager"><span class="lbl">Incident Manager</span></a></li>
                         </ul>
                     </li>
                     <li class="gold with-sub" data-category="mediaservices">
@@ -823,7 +824,8 @@
                                                     <a href="#section-managementandgovernance-systemsmanager" style="font-weight: 600;">Systems Manager</a><br />
                                                     <a href="#section-managementandgovernance-appconfig" style="font-weight: 600;">AppConfig</a><br />
                                                     <a href="#section-managementandgovernance-licensemanager" style="font-weight: 600;">License Manager</a><br />
-                                                    <a href="#section-managementandgovernance-prometheus" style="font-weight: 600;">Prometheus</a>
+                                                    <a href="#section-managementandgovernance-prometheus" style="font-weight: 600;">Prometheus</a><br />
+                                                    <a href="#section-managementandgovernance-incidentmanager" style="font-weight: 600;">Incident Manager</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1566,7 +1568,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.903.0.min.js"></script>
+        <script src="js/aws-sdk-2.907.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1704,6 +1706,7 @@
         <script src="js/services/prometheus.js"></script>
         <script src="js/services/finspace.js"></script>
         <script src="js/services/frauddetector.js"></script>
+        <script src="js/services/incidentmanager.js"></script>
         
         <script src="js/app.js"></script>
     </body>
