--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                             <li><a href="#section-compute-batch"><span class="lbl">Batch</span></a></li>
                             <li><a href="#section-compute-elasticbeanstalk"><span class="lbl">Elastic Beanstalk</span></a></li>
                             <li><a href="#section-compute-ec2imagebuilder"><span class="lbl">EC2 Image Builder</span></a></li>
+                            <li><a href="#section-compute-apprunner"><span class="lbl">App Runner</span></a></li>
                         </ul>
                     </li>
                     <li class="gold with-sub" data-category="containers">
@@ -661,7 +662,8 @@
                                                     <a href="#section-compute-lambda" style="font-weight: 600;">Lambda</a><br />
                                                     <a href="#section-compute-batch" style="font-weight: 600;">Batch</a><br />
                                                     <a href="#section-compute-elasticbeanstalk" style="font-weight: 600;">Elastic Beanstalk</a><br />
-                                                    <a href="#section-compute-ec2imagebuilder" style="font-weight: 600;">EC2 Image Builder</a>
+                                                    <a href="#section-compute-ec2imagebuilder" style="font-weight: 600;">EC2 Image Builder</a><br />
+                                                    <a href="#section-compute-apprunner" style="font-weight: 600;">App Runner</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1568,7 +1570,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.907.0.min.js"></script>
+        <script src="js/aws-sdk-2.912.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1707,6 +1709,7 @@
         <script src="js/services/finspace.js"></script>
         <script src="js/services/frauddetector.js"></script>
         <script src="js/services/incidentmanager.js"></script>
+        <script src="js/services/apprunner.js"></script>
         
         <script src="js/app.js"></script>
     </body>
