--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
                             <li><a href="#section-other-simpledb"><span class="lbl">SimpleDB</span></a></li>
                             <li><a href="#section-other-resourcegroups"><span class="lbl">Resource Groups</span></a></li>
                             <li><a href="#section-other-servicequotas"><span class="lbl">Service Quotas</span></a></li>
+                            <li><a href="#section-other-costandusagereports"><span class="lbl">Cost &amp; Usage Reports</span></a></li>
                         </ul>
                     </li>
                 </ul>
@@ -1036,7 +1037,8 @@
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-other-simpledb" style="font-weight: 600;">SimpleDB</a><br />
                                                     <a href="#section-other-resourcegroups" style="font-weight: 600;">Resource Groups</a><br />
-                                                    <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a>
+                                                    <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a><br />
+                                                    <a href="#section-other-costandusagereports" style="font-weight: 600;">Cost &amp; Usage Reports</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1710,6 +1712,7 @@
         <script src="js/services/frauddetector.js"></script>
         <script src="js/services/incidentmanager.js"></script>
         <script src="js/services/apprunner.js"></script>
+        <script src="js/services/costandusagereports.js"></script>
         
         <script src="js/app.js"></script>
     </body>
