--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@
                             <li><a href="#section-mobile-amplify"><span class="lbl">Amplify</span></a></li>
                             <li><a href="#section-mobile-appsync"><span class="lbl">AppSync</span></a></li>
                             <li><a href="#section-mobile-devicefarm"><span class="lbl">Device Farm</span></a></li>
+                            <li><a href="#section-mobile-locationservice"><span class="lbl">Location Service</span></a></li>
                         </ul>
                     </li>
                     <li class="pink with-sub" data-category="applicationintegration">
@@ -945,7 +946,8 @@
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-mobile-amplify" style="font-weight: 600;">Amplify</a><br />
                                                     <a href="#section-mobile-appsync" style="font-weight: 600;">AppSync</a><br />
-                                                    <a href="#section-mobile-devicefarm" style="font-weight: 600;">Device Farm</a>
+                                                    <a href="#section-mobile-devicefarm" style="font-weight: 600;">Device Farm</a><br />
+                                                    <a href="#section-mobile-locationservice" style="font-weight: 600;">Location Service</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1713,6 +1715,7 @@
         <script src="js/services/incidentmanager.js"></script>
         <script src="js/services/apprunner.js"></script>
         <script src="js/services/costandusagereports.js"></script>
+        <script src="js/services/locationservice.js"></script>
         
         <script src="js/app.js"></script>
     </body>
