--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
                             <li><a href="#section-machinelearning-lookoutforvision"><span class="lbl">Lookout For Vision</span></a></li>
+                            <li><a href="#section-machinelearning-lookoutforequipment"><span class="lbl">Lookout For Equipment</span></a></li>
                             <li><a href="#section-machinelearning-lookoutformetrics"><span class="lbl">Lookout For Metrics</span></a></li>
                         </ul>
                     </li>
@@ -867,6 +868,7 @@
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
                                                     <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a><br />
                                                     <a href="#section-machinelearning-lookoutforvision" style="font-weight: 600;">Lookout For Vision</a><br />
+                                                    <a href="#section-machinelearning-lookoutforequipment" style="font-weight: 600;">Lookout For Equipment</a><br />
                                                     <a href="#section-machinelearning-lookoutformetrics" style="font-weight: 600;">Lookout For Metrics</a>
                                                 </td>
                                             </tr>
@@ -1716,6 +1718,7 @@
         <script src="js/services/apprunner.js"></script>
         <script src="js/services/costandusagereports.js"></script>
         <script src="js/services/locationservice.js"></script>
+        <script src="js/services/lookoutforequipment.js"></script>
         
         <script src="js/app.js"></script>
     </body>
