--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
                             <li><a href="#section-machinelearning-frauddetector"><span class="lbl">Fraud Detector</span></a></li>
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
+                            <li><a href="#section-machinelearning-healthlake"><span class="lbl">HealthLake</span></a></li>
                             <li><a href="#section-machinelearning-lookoutforvision"><span class="lbl">Lookout For Vision</span></a></li>
                             <li><a href="#section-machinelearning-lookoutforequipment"><span class="lbl">Lookout For Equipment</span></a></li>
                             <li><a href="#section-machinelearning-lookoutformetrics"><span class="lbl">Lookout For Metrics</span></a></li>
@@ -429,7 +430,7 @@
                         <ul>
                             <li><a href="#section-analytics-athena"><span class="lbl">Athena</span></a></li>
                             <li><a href="#section-analytics-emr"><span class="lbl">EMR</span></a></li>
-                            <li><a href="#section-analytics-elasticsearch"><span class="lbl">Elasticsearch</span></a></li>
+                            <li><a href="#section-analytics-opensearch"><span class="lbl">OpenSearch</span></a></li>
                             <li><a href="#section-analytics-kinesis"><span class="lbl">Kinesis</span></a></li>
                             <li><a href="#section-analytics-quicksight"><span class="lbl">QuickSight</span></a></li>
                             <li><a href="#section-analytics-datapipeline"><span class="lbl">Data Pipeline</span></a></li>
@@ -867,6 +868,7 @@
                                                     <a href="#section-machinelearning-frauddetector" style="font-weight: 600;">Fraud Detector</a><br />
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
                                                     <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a><br />
+                                                    <a href="#section-machinelearning-healthlake" style="font-weight: 600;">HealthLake</a><br />
                                                     <a href="#section-machinelearning-lookoutforvision" style="font-weight: 600;">Lookout For Vision</a><br />
                                                     <a href="#section-machinelearning-lookoutforequipment" style="font-weight: 600;">Lookout For Equipment</a><br />
                                                     <a href="#section-machinelearning-lookoutformetrics" style="font-weight: 600;">Lookout For Metrics</a>
@@ -883,7 +885,7 @@
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-analytics-athena" style="font-weight: 600;">Athena</a><br />
                                                     <a href="#section-analytics-emr" style="font-weight: 600;">EMR</a><br />
-                                                    <a href="#section-analytics-elasticsearch" style="font-weight: 600;">Elasticsearch</a><br />
+                                                    <a href="#section-analytics-opensearch" style="font-weight: 600;">OpenSearch</a><br />
                                                     <a href="#section-analytics-kinesis" style="font-weight: 600;">Kinesis</a><br />
                                                     <a href="#section-analytics-quicksight" style="font-weight: 600;">QuickSight</a><br />
                                                     <a href="#section-analytics-datapipeline" style="font-weight: 600;">Data Pipeline</a><br />
@@ -1629,7 +1631,7 @@
         <script src="js/services/appsync.js"></script>
         <script src="js/services/directoryservice.js"></script>
         <script src="js/services/athena.js"></script>
-        <script src="js/services/elasticsearch.js"></script>
+        <script src="js/services/opensearch.js"></script>
         <script src="js/services/iotcore.js"></script>
         <script src="js/services/iot1click.js"></script>
         <script src="js/services/autoscaling.js"></script>
@@ -1719,6 +1721,7 @@
         <script src="js/services/costandusagereports.js"></script>
         <script src="js/services/locationservice.js"></script>
         <script src="js/services/lookoutforequipment.js"></script>
+        <script src="js/services/healthlake.js"></script>
         
         <script src="js/app.js"></script>
     </body>
