--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                             <li><a href="#section-database-qldb"><span class="lbl">QLDB</span></a></li>
                             <li><a href="#section-database-documentdb"><span class="lbl">DocumentDB</span></a></li>
                             <li><a href="#section-database-timestream"><span class="lbl">Timestream</span></a></li>
+                            <li><a href="#section-database-memorydb"><span class="lbl">MemoryDB</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub" data-category="migrationandtransfer">
@@ -717,7 +718,8 @@
                                                     <a href="#section-database-redshift" style="font-weight: 600;">Redshift</a><br />
                                                     <a href="#section-database-qldb" style="font-weight: 600;">QLDB</a><br />
                                                     <a href="#section-database-documentdb" style="font-weight: 600;">DocumentDB</a><br />
-                                                    <a href="#section-database-timestream" style="font-weight: 600;">Timestream</a>
+                                                    <a href="#section-database-timestream" style="font-weight: 600;">Timestream</a><br />
+                                                    <a href="#section-database-memorydb" style="font-weight: 600;">MemoryDB</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1578,7 +1580,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.958.0.min.js"></script>
+        <script src="js/aws-sdk-2.995.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1722,6 +1724,7 @@
         <script src="js/services/locationservice.js"></script>
         <script src="js/services/lookoutforequipment.js"></script>
         <script src="js/services/healthlake.js"></script>
+        <script src="js/services/memorydb.js"></script>
         
         <script src="js/app.js"></script>
     </body>
