--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
                             <li><a href="#section-machinelearning-frauddetector"><span class="lbl">Fraud Detector</span></a></li>
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
+                            <li><a href="#section-machinelearning-rekognition"><span class="lbl">Rekognition</span></a></li>
                             <li><a href="#section-machinelearning-healthlake"><span class="lbl">HealthLake</span></a></li>
                             <li><a href="#section-machinelearning-lookoutforvision"><span class="lbl">Lookout For Vision</span></a></li>
                             <li><a href="#section-machinelearning-lookoutforequipment"><span class="lbl">Lookout For Equipment</span></a></li>
@@ -870,6 +871,7 @@
                                                     <a href="#section-machinelearning-frauddetector" style="font-weight: 600;">Fraud Detector</a><br />
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
                                                     <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a><br />
+                                                    <a href="#section-machinelearning-rekognition" style="font-weight: 600;">Rekognition</a><br />
                                                     <a href="#section-machinelearning-healthlake" style="font-weight: 600;">HealthLake</a><br />
                                                     <a href="#section-machinelearning-lookoutforvision" style="font-weight: 600;">Lookout For Vision</a><br />
                                                     <a href="#section-machinelearning-lookoutforequipment" style="font-weight: 600;">Lookout For Equipment</a><br />
@@ -1725,6 +1727,7 @@
         <script src="js/services/lookoutforequipment.js"></script>
         <script src="js/services/healthlake.js"></script>
         <script src="js/services/memorydb.js"></script>
+        <script src="js/services/rekognition.js"></script>
         
         <script src="js/app.js"></script>
     </body>
