Add resilience hub

--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
                             <li><a href="#section-managementandgovernance-appconfig"><span class="lbl">AppConfig</span></a></li>
                             <li><a href="#section-managementandgovernance-licensemanager"><span class="lbl">License Manager</span></a></li>
                             <li><a href="#section-managementandgovernance-prometheus"><span class="lbl">Prometheus</span></a></li>
+                            <li><a href="#section-managementandgovernance-resiliencehub"><span class="lbl">Resilience Hub</span></a></li>
                             <li><a href="#section-managementandgovernance-incidentmanager"><span class="lbl">Incident Manager</span></a></li>
                         </ul>
                     </li>
@@ -835,6 +836,7 @@
                                                     <a href="#section-managementandgovernance-appconfig" style="font-weight: 600;">AppConfig</a><br />
                                                     <a href="#section-managementandgovernance-licensemanager" style="font-weight: 600;">License Manager</a><br />
                                                     <a href="#section-managementandgovernance-prometheus" style="font-weight: 600;">Prometheus</a><br />
+                                                    <a href="#section-managementandgovernance-resiliencehub" style="font-weight: 600;">Resilience Hub</a><br />
                                                     <a href="#section-managementandgovernance-incidentmanager" style="font-weight: 600;">Incident Manager</a>
                                                 </td>
                                             </tr>
@@ -1731,6 +1733,7 @@
         <script src="js/services/memorydb.js"></script>
         <script src="js/services/rekognition.js"></script>
         <script src="js/services/panorama.js"></script>
+        <script src="js/services/resiliencehub.js"></script>
         
         <script src="js/app.js"></script>
     </body>
