Update importable and add VPC IPAM

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
                             <li><a href="#section-networkingandcontentdelivery-appmesh"><span class="lbl">App Mesh</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-cloudmap"><span class="lbl">Cloud Map</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-globalaccelerator"><span class="lbl">Global Accelerator</span></a></li>
+                            <li><a href="#section-networkingandcontentdelivery-vpcipam"><span class="lbl">VPC IPAM</span></a></li>
                         </ul>
                     </li>
                     <li class="blue with-sub" data-category="developertools">
@@ -755,7 +756,8 @@
                                                     <a href="#section-networkingandcontentdelivery-directconnect" style="font-weight: 600;">Direct Connect</a><br />
                                                     <a href="#section-networkingandcontentdelivery-appmesh" style="font-weight: 600;">App Mesh</a><br />
                                                     <a href="#section-networkingandcontentdelivery-cloudmap" style="font-weight: 600;">Cloud Map</a><br />
-                                                    <a href="#section-networkingandcontentdelivery-globalaccelerator" style="font-weight: 600;">Global Accelerator</a>
+                                                    <a href="#section-networkingandcontentdelivery-globalaccelerator" style="font-weight: 600;">Global Accelerator</a><br />
+                                                    <a href="#section-networkingandcontentdelivery-vpcipam" style="font-weight: 600;">VPC IPAM</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1734,6 +1736,7 @@
         <script src="js/services/rekognition.js"></script>
         <script src="js/services/panorama.js"></script>
         <script src="js/services/resiliencehub.js"></script>
+        <script src="js/services/vpcipam.js"></script>
         
         <script src="js/app.js"></script>
     </body>
