--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
                             <span class="lbl">Migration &amp; Transfer</span>
                         </span>
                         <ul>
+                            <li><a href="#section-migrationandtransfer-migrationhub"><span class="lbl">Migration Hub</span></a></li>
                             <li><a href="#section-migrationandtransfer-databasemigrationservice"><span class="lbl">Database Migration Service</span></a></li>
                             <li><a href="#section-migrationandtransfer-transfer"><span class="lbl">Transfer</span></a></li>
                             <li><a href="#section-migrationandtransfer-datasync"><span class="lbl">DataSync</span></a></li>
@@ -735,6 +736,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-migrationandtransfer-migrationhub" style="font-weight: 600;">Migration Hub</a><br />
                                                     <a href="#section-migrationandtransfer-databasemigrationservice" style="font-weight: 600;">Database Migration Service</a><br />
                                                     <a href="#section-migrationandtransfer-transfer" style="font-weight: 600;">Transfer</a><br />
                                                     <a href="#section-migrationandtransfer-datasync" style="font-weight: 600;">DataSync</a>
@@ -1737,6 +1739,7 @@
         <script src="js/services/panorama.js"></script>
         <script src="js/services/resiliencehub.js"></script>
         <script src="js/services/vpcipam.js"></script>
+        <script src="js/services/migrationhub.js"></script>
         
         <script src="js/app.js"></script>
     </body>
