--- a/index.html
+++ b/index.html
@@ -654,6 +654,12 @@
                 </header>
 
                 <section id="section-dashboard" data-section-breadcrumb1-title="Dashboard" data-section-breadcrumb1-link="#section-dashboard" data-section-title="Dashboard" class="former2-section" style="display: none;">
+                    <div class="alert alert-blue-dirty alert-no-border alert-txt-colored alert-close alert-dismissible fade show" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                        <strong>Heads Up!</strong> The Former2 Helper extension for Google Chrome has been updated to cater for <a style="text-decoration: underline;" target="_blank" href="https://developer.chrome.com/docs/extensions/mv3/mv2-sunset/">Manifest V3</a>. Please report any issues to <a style="text-decoration: underline;" target="_blank" href="https://github.com/iann0036/former2/issues">the GitHub repository</a>.
+                    </div>
                     <div class="row">
                         <div class="col-md-12">
                             <section class="box-typical box-typical-padding" style="padding: 40px 40px 30px 40px;">
