--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
                             <li><a href="#section-machinelearning-sagemaker"><span class="lbl">SageMaker</span></a></li>
                             <li><a href="#section-machinelearning-codeguru"><span class="lbl">CodeGuru</span></a></li>
                             <li><a href="#section-machinelearning-devopsguru"><span class="lbl">DevOps Guru</span></a></li>
+                            <li><a href="#section-machinelearning-forecast"><span class="lbl">Forecast</span></a></li>
                             <li><a href="#section-machinelearning-frauddetector"><span class="lbl">Fraud Detector</span></a></li>
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
@@ -654,12 +655,6 @@
                 </header>
 
                 <section id="section-dashboard" data-section-breadcrumb1-title="Dashboard" data-section-breadcrumb1-link="#section-dashboard" data-section-title="Dashboard" class="former2-section" style="display: none;">
-                    <div class="alert alert-blue-dirty alert-no-border alert-txt-colored alert-close alert-dismissible fade show" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">×</span>
-                        </button>
-                        <strong>Heads Up!</strong> The Former2 Helper extension for Google Chrome has been updated to cater for <a style="text-decoration: underline;" target="_blank" href="https://developer.chrome.com/docs/extensions/mv3/mv2-sunset/">Manifest V3</a>. Please report any issues to <a style="text-decoration: underline;" target="_blank" href="https://github.com/iann0036/former2/issues">the GitHub repository</a>.
-                    </div>
                     <div class="row">
                         <div class="col-md-12">
                             <section class="box-typical box-typical-padding" style="padding: 40px 40px 30px 40px;">
@@ -881,6 +876,7 @@
                                                     <a href="#section-machinelearning-sagemaker" style="font-weight: 600;">SageMaker</a><br />
                                                     <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a><br />
                                                     <a href="#section-machinelearning-devopsguru" style="font-weight: 600;">DevOps Guru</a><br />
+                                                    <a href="#section-machinelearning-forecast" style="font-weight: 600;">Forecast</a><br />
                                                     <a href="#section-machinelearning-frauddetector" style="font-weight: 600;">Fraud Detector</a><br />
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
                                                     <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a><br />
@@ -1746,6 +1742,7 @@
         <script src="js/services/resiliencehub.js"></script>
         <script src="js/services/vpcipam.js"></script>
         <script src="js/services/migrationhub.js"></script>
+        <script src="js/services/forecast.js"></script>
         
         <script src="js/app.js"></script>
     </body>
