--- a/index.html
+++ b/index.html
@@ -151,11 +151,13 @@
                                         <a class="dropdown-item region-item" data-region="af-south-1">Africa (Cape Town)</a>
                                         <a class="dropdown-item region-item" data-region="ap-east-1">Asia Pacific (Hong Kong)</a>
                                         <a class="dropdown-item region-item" data-region="ap-south-1">Asia Pacific (Mumbai)</a>
+                                        <a class="dropdown-item region-item" data-region="ap-south-2">Asia Pacific (Hyderabad)</a>
                                         <a class="dropdown-item region-item" data-region="ap-northeast-3">Asia Pacific (Osaka)</a>
                                         <a class="dropdown-item region-item" data-region="ap-northeast-2">Asia Pacific (Seoul)</a>
                                         <a class="dropdown-item region-item" data-region="ap-southeast-1">Asia Pacific (Singapore)</a>
                                         <a class="dropdown-item region-item" data-region="ap-southeast-2">Asia Pacific (Sydney)</a>
                                         <a class="dropdown-item region-item" data-region="ap-southeast-3">Asia Pacific (Jakarta)</a>
+                                        <a class="dropdown-item region-item" data-region="ap-southeast-4">Asia Pacific (Melbourne)</a>
                                         <a class="dropdown-item region-item" data-region="ap-northeast-1">Asia Pacific (Tokyo)</a>
                                         <a class="dropdown-item region-item" data-region="ca-central-1">Canada (Central)</a>
                                         <a class="dropdown-item region-item" data-region="eu-central-1">EU (Frankfurt)</a>
@@ -163,9 +165,11 @@
                                         <a class="dropdown-item region-item" data-region="eu-west-1">EU (Ireland)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-2">EU (London)</a>
                                         <a class="dropdown-item region-item" data-region="eu-south-1">EU (Milan)</a>
+                                        <a class="dropdown-item region-item" data-region="eu-south-2">EU (Spain)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-3">EU (Paris)</a>
                                         <a class="dropdown-item region-item" data-region="eu-north-1">EU (Stockholm)</a>
                                         <a class="dropdown-item region-item" data-region="me-south-1">Middle East (Bahrain)</a>
+                                        <a class="dropdown-item region-item" data-region="me-south-2">Middle East (UAE)</a>
                                         <a class="dropdown-item region-item" data-region="sa-east-1">South America (S&#227;o Paulo)</a>
                                         <a class="dropdown-item region-item" data-region="us-gov-east-1">AWS GovCloud (US-Gov-East)</a>
                                         <a class="dropdown-item region-item" data-region="us-gov-west-1">AWS GovCloud (US-Gov-West)</a>
